--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,9 @@
         <h2>LET'S TRAIN</h2>
         <nav>
             <ul>
-                <li><a href="#">Iniciar sesión</a></li>
-                <li><a href="#">Registrarse</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href= "login.html">Iniciar sesión</a></li>
+                <li><a href="sign-up.html">Registrarse</a></li>
+
             </ul>
         </nav>
     </header>
