--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h2>LET'S TRAIN</h2>
+      <h2><a href="index.html"> LET'S TRAIN </a></h2>
     </header>
     <main>
       <section class="login">
