--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,14 +22,17 @@
             <div class="card">
                 <h3>PRÓXIMOS EVENTOS</h3>
                 <p>Descubre los eventos deportivos que están por venir.</p>
+                <img src = "../../recursos/eventos.jpg" alt="Imagen de eventos deportivos">
             </div>
             <div class="card">
                 <h3>ENTRENADORES</h3>
                 <p>Conoce a nuestros entrenadores profesionales.</p>
+                <img src = "../../recursos/entrenador.jpg" alt="Imagen de entrenadores">
             </div>
             <div class="card">
                 <h3>ENTRENA CONMIGO</h3>
                 <p>Encuentra y conoce la persona ideal para entrenar contigo.</p>
+                <img src = "../../recursos/entrena_conmigo.jpg" alt="Imagen de entrenamiento">
             </div>
         </section>
     </main>
